tests/assets/test_suites/w3c_wsdl20/documents/bad/wsdlx-3B/wsdlx.wsdl
<?xml version="1.0" encoding="UTF-8"?>
<!-- https://dev.w3.org/2002/ws/desc/test-suite/documents/bad/wsdlx-3B/wsdlx.wsdl -->
<!-- Copyright © 2007-03-23 05:52 - W3C, (MIT, ERCIM, Keio). All Rights Reserved. http://www.w3.org/Consortium/Legal/2002/copyright-documents-20021231 -->
<wsdl:description targetNamespace="http://example.org/"
	xmlns:tns="http://example.org/"
	xmlns:wsdl="http://www.w3.org/ns/wsdl"
	xmlns:xs="http://www.w3.org/2001/XMLSchema"
	xmlns:wsdlx="http://www.w3.org/ns/wsdl-extensions">

	<wsdl:documentation>
		This test shows an invalid use of WSDL 2.0
		wsdlx:interface and wsdlx:binding attributes. When
		both attributes are used the specified binding
		must either specify the interface or specify no
		interface.
		
		This document violates assertion Schema-1079.
	</wsdl:documentation>
	
	<wsdl:types>
		<xs:schema targetNamespace="http://example.org/">
			<xs:element name="element" type="xs:string"/>
			<xs:element name="service" type="xs:anyURI" 
			wsdlx:interface="interface" wsdlx:binding="tns:binding"/>
		</xs:schema>
	</wsdl:types>
	
	<wsdl:interface name="interface">
		<wsdl:operation name="operation" pattern="http://www.w3.org/ns/wsdl/in-only">
			<wsdl:input messageLabel="In"
				element="tns:element" />
		</wsdl:operation>
	</wsdl:interface>
	
	<wsdl:interface name="interface2">
		<wsdl:operation name="operation" pattern="http://www.w3.org/ns/wsdl/in-only">
			<wsdl:input messageLabel="In"
				element="tns:element" />
		</wsdl:operation>
	</wsdl:interface>

	<wsdl:binding name="binding" type="http://www.w3.org/ns/wsdl/http" interface="tns:interface2">
	</wsdl:binding>
</wsdl:description>
